--- a/components/jcf2/Ui/Settings/frClarifyLongLineBreaker.lfm
+++ b/components/jcf2/Ui/Settings/frClarifyLongLineBreaker.lfm
@@ -3,33 +3,45 @@ inherited fClarifyLongLineBreaker: TfClarifyLongLineBreaker
   Width = 437
   ClientHeight = 194
   ClientWidth = 437
+  TabOrder = 0
   object Label3: TLabel[0]
-    Left = 8
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = edtMaxLineLength
+    AnchorSideTop.Side = asrCenter
+    Left = 6
     Height = 14
-    Top = 8
+    Top = 9
     Width = 73
+    BorderSpacing.Left = 6
     Caption = 'Max line length'
     ParentColor = False
   end
   object edtMaxLineLength: TSpinEdit[1]
     AnchorSideLeft.Control = Label3
     AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = Label3
-    AnchorSideTop.Side = asrCenter
-    Left = 116
+    AnchorSideTop.Control = Owner
+    Left = 85
     Height = 21
-    Top = 3
+    Top = 6
     Width = 49
-    BorderSpacing.Left = 6
+    BorderSpacing.Around = 6
     MaxValue = 999
     TabOrder = 0
   end
   object rgRebreakLongLines: TRadioGroup[2]
-    Left = 8
-    Height = 89
-    Top = 44
-    Width = 393
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = edtMaxLineLength
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 6
+    Height = 81
+    Top = 33
+    Width = 425
+    Anchors = [akTop, akLeft, akRight]
     AutoFill = True
+    AutoSize = True
+    BorderSpacing.Around = 6
     Caption = '&Break lines that are longer than max line length'
     ChildSizing.LeftRightSpacing = 6
     ChildSizing.TopBottomSpacing = 6
@@ -39,8 +51,8 @@ inherited fClarifyLongLineBreaker: TfClarifyLongLineBreaker
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 71
-    ClientWidth = 389
+    ClientHeight = 63
+    ClientWidth = 421
     ItemIndex = 1
     Items.Strings = (
       '&Never'
